--- a/style.css
+++ b/style.css
@@ -5,39 +5,38 @@
 }
 
 body {
-    background-image: url('images/Group 5-1.png'); /* Caminho relativo da imagem */
+    background-image: url('images/Group 5-1.png');
     display: flex;
     justify-content: center;
-    align-items: center; /* Centraliza o conteúdo verticalmente */
-    height: 100vh; /* Ocupa 100% da altura da janela de visualização */
-    background-size: cover; /* Faz a imagem de fundo cobrir a tela */
-    padding: 20px;
+    align-items: center;
+    height: 100vh;
+    background-size: cover;
+    padding: 1.25rem;
 }
 
 .container {
     display: flex;   
     justify-content: space-between;   
-    padding: 20px;
+    padding: 1.25rem;
     width: 70%;
-    
 }
 
 .text-group {
-    display: flex; /* Usar flexbox para organizar o conteúdo */
-    flex-direction: column; /* Alinha os itens verticalmente */
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    min-width: 550px; /* Define uma largura mínima */
-    width: 400px; /* Largura fixa */
+    min-width: 34.375rem;
+    width: 25rem;
 }
 
 h2 {
-    font-size: 50px;
-    line-height: 55px;
+    font-size: 3.125rem;
+    line-height: 3.438rem;
     color: white;
     font-family: "Poppins", sans-serif;
     font-weight: 700;
     font-style: normal;
-    margin-bottom: 20px;   
+    margin-bottom: 1.25rem;   
 }
 
 .subText {
@@ -45,24 +44,23 @@ h2 {
     font-family: "Poppins", sans-serif;
     font-weight: 700;
     font-style: normal;
-    max-width: 600px;    
+    max-width: 37.5rem;    
 }
 
 .text {
-    padding: 20px;
+    padding: 1.25rem;
 }
 
 input[type="text"] {
-    width: 520px;
-    padding: 20px;
-    height: 55px;
-    border: 2px solid #ccc;
-    border-radius: 5px;
+    width: 32.5rem;
+    padding: 1.25rem;
+    height: 3.438rem;
+    border: 0.125rem solid #ccc;
+    border-radius: 0.313rem;
     box-sizing: border-box;
-    font-size: 14px;
-    margin-bottom: 5px; /* Espaço reduzido entre o input e a mensagem de erro */
+    font-size: 0.875rem;
+    margin-bottom: 0.313rem;
     font-family: "Poppins", sans-serif;
-    
 }
 
 input[type="text"] {
@@ -72,22 +70,22 @@ input[type="text"] {
 
 
 input[type="text"]:focus {
-    border-color: #333; /* Cor mais escura na borda ao clicar */
-    outline: none; /* Remove o contorno padrão do navegador */
+    border-color: #333;
+    outline: none;
 }
 
 
 
 input[type="text"].input-error {
-    border-color: #FF7979; /* Borda vermelha quando há erro */
+    border-color: #FF7979;
 }
 
 .form-group {
-    border: 6px solid white; /* Borda ao redor dos inputs */
-    border-radius: 10px; /* Borda arredondada */
-    padding: 20px; /* Espaçamento interno */
-    width: 580px; /* Largura máxima do contêiner */
-    height: 580px;
+    border: 0.375rem solid white;
+    border-radius: 0.625rem;
+    padding: 1.25rem;
+    width: 36.25rem;
+    height: 36.25rem;
     background-color: white;
     padding-top: 6%;
 }
@@ -99,17 +97,17 @@ input[type="text"].input-error {
 
 .title-form {
     position: relative;
-    border: 20px #5E54A4 solid;
+    border: 1.25rem #5E54A4 solid;
     width: 100%;
     left: 0%;
-    border-radius: 10px;
+    border-radius: 0.625rem;
     background-color: #5E54A4;
     top: -3%;
     font-family: "Poppins", sans-serif;
-    display: flex; /* Usa flexbox para alinhar o conteúdo */
-    justify-content: center; /* Centraliza horizontalmente */
-    align-items: center; /* Centraliza verticalmente */
-    text-align: center; /* Centraliza o texto no centro */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     color: #CAC8DE;    
 }
 
@@ -120,70 +118,68 @@ input[type="text"].input-error {
 
 .input-group {
     display: flex;
-    align-items: center; /* Alinha verticalmente o ícone de erro e o input */
-    margin-bottom: 40px; /* Espaçamento entre grupos de inputs */
-    position: relative; /* Para que o ícone de erro seja posicionado corretamente */
+    align-items: center;
+    margin-bottom: 2.5rem;
+    position: relative;
 }
 
 .error-icon {
-    width: 20px;
-    height: 20px;
-    position: absolute; /* Fica por cima do input */
-    right: 35px; /* Ajusta a distância à direita do campo de input */
-    top: 45%; /* Centraliza verticalmente no campo */
-    transform: translateY(-50%); /* Para centralizar corretamente */
-    visibility: hidden; /* O ícone de erro começa invisível */
+    width: 1.25rem;
+    height: 1.25rem;
+    position: absolute;
+    right: 2.188rem;
+    top: 45%;
+    transform: translateY(-50%);
+    visibility: hidden;
 }
 
 .input-error + .error-message-error .error-icon {
-    visibility: visible; /* Exibe o ícone quando há um erro */
+    visibility: visible;
 }
 
 
 
 .error-message {
     color: #FF7979;
-    font-size: 11px;
-    visibility: hidden; /* Mensagem de erro invisível inicialmente */
-    position: absolute; /* Posiciona a mensagem em relação ao input */
-    left: 400px; /* Posicione à esquerda ou ajuste conforme necessário */
-    top: 100%; /* Coloca a mensagem logo abaixo do input */
-    margin-top: 5px; /* Espaço entre o input e a mensagem */
+    font-size: 0.688rem;
+    visibility: hidden;
+    position: absolute;
+    left: 25rem;
+    top: 100%;
+    margin-top: 0.313rem;
 }
 
 .error-message.show {
-    visibility: visible; /* Torna a mensagem visível quando necessário */
+    visibility: visible;
 }
 
 .input-error {
-    border-color: red; /* Adiciona uma borda vermelha ao campo com erro */
+    border-color: red;
 }
 
 .button-group {
     display: flex;
-    flex-direction: column; /* Alinha os itens verticalmente */
+    flex-direction: column;
     justify-content: center;
     text-align: center; 
-    margin-top: 40px;   
+    margin-top: 2.5rem;   
 }
 
 button {
-    border: 15px #77E2B3 solid;
+    border: 0.938rem #77E2B3 solid;
     width: 98%;
-    left: 0%;
-    border-radius: 5px;
-    background-color:#77E2B3;
+    border-radius: 0.313rem;
+    background-color: #77E2B3;
     color: white;
     font-family: "Poppins", sans-serif;
-    font-size: 15px;
-    display: inline;    
+    font-size: 0.938rem;
 }
 
 .button-text {
     display: inline;
     justify-content: center;
-    padding: 15px;
-    font-size: 13px;
+    padding: 0.938rem;
+    font-size: 0.813rem;
     color: #CAC8DE;
     
 }
@@ -195,27 +191,43 @@ button {
 
 @media screen and (max-width: 768px) {
     .container {
+        display: flex;
         flex-direction: column;
         width: 100%;
         align-items: center;
-        padding: 10px;
+        padding: 0.625rem;
+        margin: 1.25rem auto;
+        height: 100vh;
     }
 
     .text-group {
         min-width: unset;
         width: 100%;
         text-align: center;
-        margin-bottom: 40px;
+        margin-bottom: 2.5rem;
+        padding: 0 0.938rem;
     }
 
     h2 {
-        font-size: 30px;
-        line-height: 35px;
+        font-size: 1.875rem;
+        line-height: 2.188rem;
+        margin-bottom: 1.25rem;
+        color: white;
+        display: block;
+    }
+
+    h2 span {
+        display: inline-block;
+    }
+
+    h2 br {
+        display: inline;
+        content: " ";
     }
 
     .subText {
-        font-size: 16px;
-        padding: 0 20px;
+        font-size: 1rem;
+        padding: 0 1.25rem;
     }
 
     .subText br {
@@ -229,13 +241,13 @@ button {
     .form-group {
         width: 100%;
         height: auto;
-        padding: 20px;
+        padding: 1.25rem;
     }
 
     .title-form {
         width: 100%;
-        padding: 15px;
-        font-size: 14px;
+        padding: 0.938rem;
+        font-size: 0.875rem;
     }
 
     input[type="text"] {
@@ -262,23 +274,24 @@ button {
     }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
     body {
-        padding: 10px;
+        padding: 0.625rem;
     }
 
     h2 {
-        font-size: 25px;
-        line-height: 30px;
+        font-size: 1.563rem;
+        line-height: 1.875rem;
     }
 
     .title-form {
-        font-size: 12px;
-        padding: 10px;
+        font-size: 0.75rem;
+        padding: 0.625rem;
     }
 
     .input-group {
-        margin-bottom: 25px;
+        margin-bottom: 1.563rem;
     }
 }
+
 
